--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
     "@redux-devtools/extension": "^3.2.6",
+    "chart.js": "^4.4.1",
+    "date-fns": "^3.0.1",
     "@reduxjs/toolkit": "^1.9.7",
     "firebase": "^10.7.1",
+    "react-chartjs-2": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
